# docs/openapi/api.json
@@ -434,86 +434,6 @@
         ]
       }
     },
-    "/api/reset_password": {
-      "get": {
-        "summary": "发送密码重置邮件",
-        "deprecated": false,
-        "description": "🔓 无需鉴权",
-        "tags": [
-          "用户登陆注册"
-        ],
-        "parameters": [
-          {
-            "name": "email",
-            "in": "query",
-            "description": "",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "成功",
-            "headers": {}
-          }
-        },
-        "security": [
-          {
-            "Combination343": []
-          },
-          {
-            "Combination1243": []
-          }
-        ]
-      }
-    },
-    "/api/user/reset": {
-      "post": {
-        "summary": "重置密码",
-        "deprecated": false,
-        "description": "🔓 无需鉴权",
-        "tags": [
-          "用户登陆注册"
-        ],
-        "parameters": [],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "type": "string"
-                  },
-                  "token": {
-                    "type": "string"
-                  },
-                  "password": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "成功",
-            "headers": {}
-          }
-        },
-        "security": [
-          {
-            "Combination343": []
-          },
-          {
-            "Combination1243": []
-          }
-        ]
-      }
-    },
     "/api/user/register": {
       "post": {
         "summary": "用户注册",
